--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ h2 {
   text-decoration: underline;
 }
 header {
-  height: 340px;
   background-image: linear-gradient(rgba(0,0,0,0.15),rgba(0,0,0,0.15)), url("backgroundimage.png");
   background-repeat: no-repeat;
-  width: 100%;
+  background-size:inherit;
+  height: 300px;
 }
 
 #aboutMe {
